--- a/Value_files/bootstrap.css
+++ b/Value_files/bootstrap.css
@@ -600,7 +600,7 @@ pre code {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-right: -15px;
-  margin-left: 1em;
+  margin-left: -15px;
 }
 
 .no-gutters {
